discussion/kv_engine/150509/150509_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45495: wip: ProducerStreamIFace

Change-Id: I5f113d26828171a5f45de8a1495d4a5fafc7029d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-04-06 20:36:44.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-06 22:07:15.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34803/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34803/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8161/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:43:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void addStats(const AddStatFn& add_stat, const void* c) = 0;
    ~~~~~~~~     ^
                                                                    override 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:50:17: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    virtual cb::engine_errc seqnoAck(const std::string& consumerName,
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8161/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:50:17:
error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9867/ : FAILURE

Failure of GoogleTest "ObjectRegistryTest.NumItem":

<pre>
[ RUN      ] ObjectRegistryTest.NumItem
[2021-04-06T21:17:21.555Z] unknown file: Failure
[2021-04-06T21:17:21.555Z] C++ exception with description "CouchKVStore::initialize: openDB error:no such file, file_name:./test/2.couch.0" thrown in SetUp().
[2021-04-06T21:17:21.555Z] [  FAILED  ] ObjectRegistryTest.NumItem (2 ms)
ObjectRegistryTest.NumItem
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29868/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6705/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17646/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8797/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9731/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10096/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
